--- a/_posts/2023-01-30-first.md
+++ b/_posts/2023-01-30-first.md
@@ -7,4 +7,4 @@ title:  "첫 포스팅 입니다."
 
 앞으로 열심히 해보겠습니다.
 
-![2023-01-30-first.png](:/9f77583b58c24072a15f3f3ec7fb2dc6)
+![2023-01-30-first.png]({{site.url}}/assets/images/2023-01-30-first.png)
