tag, category, toc(table of contents) 추가
태그, 카태고리, 목차 추가했습니다.

--- a/_posts/2023-01-30-first.md
+++ b/_posts/2023-01-30-first.md
@@ -1,12 +1,36 @@
 ---
 layout: single
 title:  "첫 포스팅 입니다."
+categories: coding
+tag: [c#, blog, jekyll]
+toc: true
 ---
 
 # 오늘 처음 블로그를 만들었어요
 
 앞으로 열심히 해보겠습니다.
 
+```c#
+using System;
+
+namespace HelloWorld
+{
+  class Program
+  {
+    static void Main(string[] args)
+    {
+      Console.WriteLine("Hello World!");    
+    }
+  }
+}
+```
+
 실시간 반영 되나요?
 
 ![2023-01-30-first.png](../assets/images/2023-01-30-first.png)
+
+## 세부 목차1
+
+### 이것도 세부 목차
+
+# 반갑습니다.
