--- a/_posts/2023-01-30-first.md
+++ b/_posts/2023-01-30-first.md
@@ -4,6 +4,10 @@ title:  "첫 포스팅 입니다."
 categories: coding
 tag: [c#, blog, jekyll]
 toc: true
+author_profile: false
+sidebar:
+    nav: "docs"
+# search: false 검색 기능에 나오지 않게 할려면 false
 ---
 
 # 오늘 처음 블로그를 만들었어요
