공지사항(Notice), 버튼, Youtube 영상 추가

--- a/_posts/2023-01-30-first.md
+++ b/_posts/2023-01-30-first.md
@@ -10,6 +10,22 @@ sidebar:
 # search: false 검색 기능에 나오지 않게 할려면 false
 ---
 
+**[공지사항]** [블로그 공지사항 테스트입니다.](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
+{: .notice--success}
+
+<div class="notice--danger">
+<h4>공지사항입니다.</h4>
+<ul>
+    <li>공지사항 순서 1</li>
+    <li>공지사항 순서 2</li>
+    <li>공지사항 순서 3</li>
+</ul>
+</div>
+
+[버튼입니다.](https://google.com){: .btn .btn--danger}
+
+{% include video id="q0P3TSoVNDM" provider="youtube" %}
+
 # 오늘 처음 블로그를 만들었어요
 
 앞으로 열심히 해보겠습니다.
