toc_sticky, 이미지 오류 해결

--- a/_posts/2023-01-30-first.md
+++ b/_posts/2023-01-30-first.md
@@ -4,9 +4,11 @@ title:  "첫 포스팅 입니다."
 categories: coding
 tag: [c#, blog, jekyll]
 toc: true
+toc_sticky: true
+toc_label: 목차
 author_profile: false
-sidebar:
-    nav: "docs"
+sidebar:      # 왼쪽 사이드 바
+    nav: "docs"  
 # search: false 검색 기능에 나오지 않게 할려면 false
 ---
 
@@ -47,7 +49,7 @@ namespace HelloWorld
 
 실시간 반영 되나요?
 
-![2023-01-30-first.png](../assets/images/2023-01-30-first.png)
+![2023-01-30-first.png]({{site.url}}/assets/images/2023-01-30-first.png)
 
 ## 세부 목차1
 
