--- a/_posts/Blog/2023-02-01-Blog_Func1.md
+++ b/_posts/Blog/2023-02-01-Blog_Func1.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "깃허브 블로그 기능 정리 1"
+title:  "[Blog] 깃허브 블로그 기능 정리 1"
 categories: blog
 tag: [blog, jekyll]
 # search: false 검색 기능에 나오지 않게 할려면 false
