--- a/_posts/typing/2023-02-01-Typing.md
+++ b/_posts/typing/2023-02-01-Typing.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "빠른 작업을 위한 타자연습"
+title:  [Typing]"빠른 작업을 위한 타자연습"
 categories: typing
 tag: [typing]
 # search: false 검색 기능에 나오지 않게 할려면 false
