Posting_항해99_14일차 TIL - 수정
사진 잘못올림
예시가 잘못됨

--- a/_posts/항해99코테스터디/2024-11-03-HangHe99_5.md
+++ b/_posts/항해99코테스터디/2024-11-03-HangHe99_5.md
@@ -14,7 +14,7 @@ tag: [codingtest]
 
 # [챌린저 Day 13] 미로보수
 [https://www.acmicpc.net/problem/30689](https://www.acmicpc.net/problem/30689)
-![](../../assets/images/2024-11-09-HangHe99_5/[챌린저_Day_13]_미로보수_결과.png) <br>
+![](../../assets/images/2024-11-09-HangHe99_5/[챌린저_Day_13]_미로보수.png) <br>
 
 그래프에서 사이클이 있는지 판단하고 그 사이클을 없앨 수 있는 최소한의 비용을 구하는 문제입니다. <br>
 그래프 사이클 판단은 [https://www.acmicpc.net/problem/16724](https://www.acmicpc.net/problem/16724)문제에서 경험한 적이 있기에<br>
@@ -30,9 +30,9 @@ tag: [codingtest]
 풀면서 중요한 점은 사이클의 비용만 연산을 해야합니다. <br>
 예를 들어<br>
 
-v > > <br>
-v < > <br>
-> ^ v <br>
+D R R <br>
+D L R <br>
+R U D <br>
 같은 경우에는 (1,2)(1,3)(2,3)(2,2) 가 사이클입니다. (왼쪽 위에를 1, 1로 잡고 (x, y)로 생각하면)<br>
 하지만 (1,1)에서 dfs를 실행하면 경로에 (1,1)이 포함되어 (1,1)이 최소비용이라면 잘못된 오답을 반환할 수 있습니다.<br>
 따라서 모든 좌표에서 dfs를 수행하는데 사이클만 연산을 해야합니다.<br>
